[gd_scene load_steps=5 format=3 uid="uid://l6x3hks1g7wl"]

[ext_resource type="Script" path="res://GrassHexStatic.gd" id="1_5qp0j"]
[ext_resource type="ArrayMesh" uid="uid://dc31iw0bvbd5c" path="res://addons/Models/OBJ format/grass.obj" id="2_4j2ja"]
[ext_resource type="Script" path="res://GrassHexMesh.gd" id="3_4h8t2"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_hwikl"]
data = PackedVector3Array(0.5, 0, -0.2887, 0, 0, 0.5774, 0.5, 0, 0.2887, 0, 0, 0.5774, 0.5, 0, -0.2887, 0, 0, -0.5774, 0, 0, 0.5774, 0, 0, -0.5774, -0.5, 0, 0.2887, -0.5, 0, 0.2887, 0, 0, -0.5774, -0.5, 0, -0.2887, 0, 0, 0.5774, 0.5, 0.1, 0.2887, 0.5, 0, 0.2887, 0.5, 0.1, 0.2887, 0, 0, 0.5774, 0, 0.1, 0.5774, 0.5, 0, -0.2887, 0, 0.1, -0.5774, 0, 0, -0.5774, 0, 0.1, -0.5774, 0.5, 0, -0.2887, 0.5, 0.1, -0.2887, 0, 0, -0.5774, -0.5, 0.1, -0.2887, -0.5, 0, -0.2887, -0.5, 0.1, -0.2887, 0, 0, -0.5774, 0, 0.1, -0.5774, -0.5, 0.1, -0.2887, -0.5, 0, 0.2887, -0.5, 0, -0.2887, -0.5, 0, 0.2887, -0.5, 0.1, -0.2887, -0.5, 0.1, 0.2887, 0.5, 0, -0.2887, 0.5, 0.1, 0.2887, 0.5, 0.1, -0.2887, 0.5, 0.1, 0.2887, 0.5, 0, -0.2887, 0.5, 0, 0.2887, -0.5, 0, 0.2887, 0, 0.1, 0.5774, 0, 0, 0.5774, 0, 0.1, 0.5774, -0.5, 0, 0.2887, -0.5, 0.1, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.1, 0.2887, -0.5, 0.1, -0.2887, -0.5, 0.1, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.2, 0.2887, 0, 0.2, 0.5774, 0.5, 0.2, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.2, -0.2887, 0, 0.2, 0.5774, 0, 0.2, -0.5774, 0, 0.2, -0.5774, 0, 0.2, 0.5774, -0.5, 0.2, 0.2887, 0, 0.2, -0.5774, -0.5, 0.2, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.1, 0.2887, 0, 0.2, 0.5774, 0, 0.1, 0.5774, 0, 0.2, 0.5774, -0.5, 0.1, 0.2887, -0.5, 0.2, 0.2887, 0, 0.1, 0.5774, 0.5, 0.2, 0.2887, 0.5, 0.1, 0.2887, 0.5, 0.2, 0.2887, 0, 0.1, 0.5774, 0, 0.2, 0.5774, 0.5, 0.1, -0.2887, 0, 0.2, -0.5774, 0, 0.1, -0.5774, 0, 0.2, -0.5774, 0.5, 0.1, -0.2887, 0.5, 0.2, -0.2887, 0.5, 0.1, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.2, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.1, -0.2887, 0.5, 0.1, 0.2887, 0, 0.1, -0.5774, -0.5, 0.2, -0.2887, -0.5, 0.1, -0.2887, -0.5, 0.2, -0.2887, 0, 0.1, -0.5774, 0, 0.2, -0.5774, 0.5, 0, -0.2887, 0, 0, 0.5774, 0.5, 0, 0.2887, 0, 0, 0.5774, 0.5, 0, -0.2887, 0, 0, -0.5774, 0, 0, 0.5774, 0, 0, -0.5774, -0.5, 0, 0.2887, -0.5, 0, 0.2887, 0, 0, -0.5774, -0.5, 0, -0.2887, 0, 0, 0.5774, 0.5, 0.1, 0.2887, 0.5, 0, 0.2887, 0.5, 0.1, 0.2887, 0, 0, 0.5774, 0, 0.1, 0.5774, 0.5, 0, -0.2887, 0, 0.1, -0.5774, 0, 0, -0.5774, 0, 0.1, -0.5774, 0.5, 0, -0.2887, 0.5, 0.1, -0.2887, 0, 0, -0.5774, -0.5, 0.1, -0.2887, -0.5, 0, -0.2887, -0.5, 0.1, -0.2887, 0, 0, -0.5774, 0, 0.1, -0.5774, -0.5, 0.1, -0.2887, -0.5, 0, 0.2887, -0.5, 0, -0.2887, -0.5, 0, 0.2887, -0.5, 0.1, -0.2887, -0.5, 0.1, 0.2887, 0.5, 0, -0.2887, 0.5, 0.1, 0.2887, 0.5, 0.1, -0.2887, 0.5, 0.1, 0.2887, 0.5, 0, -0.2887, 0.5, 0, 0.2887, -0.5, 0, 0.2887, 0, 0.1, 0.5774, 0, 0, 0.5774, 0, 0.1, 0.5774, -0.5, 0, 0.2887, -0.5, 0.1, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.1, 0.2887, -0.5, 0.1, -0.2887, -0.5, 0.1, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.2, 0.2887, 0, 0.2, 0.5774, 0.5, 0.2, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.2, -0.2887, 0, 0.2, 0.5774, 0, 0.2, -0.5774, 0, 0.2, -0.5774, 0, 0.2, 0.5774, -0.5, 0.2, 0.2887, 0, 0.2, -0.5774, -0.5, 0.2, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.1, 0.2887, 0, 0.2, 0.5774, 0, 0.1, 0.5774, 0, 0.2, 0.5774, -0.5, 0.1, 0.2887, -0.5, 0.2, 0.2887, 0, 0.1, 0.5774, 0.5, 0.2, 0.2887, 0.5, 0.1, 0.2887, 0.5, 0.2, 0.2887, 0, 0.1, 0.5774, 0, 0.2, 0.5774, 0.5, 0.1, -0.2887, 0, 0.2, -0.5774, 0, 0.1, -0.5774, 0, 0.2, -0.5774, 0.5, 0.1, -0.2887, 0.5, 0.2, -0.2887, 0.5, 0.1, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.2, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.1, -0.2887, 0.5, 0.1, 0.2887, 0, 0.1, -0.5774, -0.5, 0.2, -0.2887, -0.5, 0.1, -0.2887, -0.5, 0.2, -0.2887, 0, 0.1, -0.5774, 0, 0.2, -0.5774)

[node name="GrassHexStatic" type="StaticBody3D"]
script = ExtResource("1_5qp0j")

[node name="GrassTileMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = ExtResource("2_4j2ja")
skeleton = NodePath("../../..")
script = ExtResource("3_4h8t2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_hwikl")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
